--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-
+        <title>LED Strip Controller</title>
+        <h1>LED Strip Controller</h1>
     </body>
 </html>
