--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <title>LED Strip Controller</title>
         <h1>LED Strip Controller</h1>
+
+        <div class="pane"></div>
+
     </body>
 </html>
