--- a/index.html
+++ b/index.html
@@ -5,31 +5,21 @@
     </head>
     <body>
 
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+        <div id="UISidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeNavButton" onclick="closeNav()">&times;</a>
+            <a href="index.html">Home</a>
+            <a href="#">Solid Color</a>
+            <a href="#">Audio</a>
+            <a href="#">Fade and Flash</a>
         </div>
 
         <div id="main">
-            <h2>Sidenav Push Example</h2>
-            <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+            <hr>
+            <h2>LED Strip Controller</h2>
         </div>
 
-        <script>
-            function openNav() {
-                document.getElementById("mySidenav").style.width = "250px";
-                document.getElementById("main").style.marginLeft = "250px";
-            }
-
-            function closeNav() {
-                document.getElementById("mySidenav").style.width = "0";
-                document.getElementById("main").style.marginLeft= "0";
-            }
-        </script>
+        <script src="UIController.js"></script>
 
     </body>
 </html>
