--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
 
@@ -19,7 +19,7 @@
             <h2>LED Strip Controller</h2>
         </div>
 
-        <script src="UIController.js"></script>
+        <script src="scripts/UIController.js"></script>
 
     </body>
 </html>
