Adding buttons to turn on particular light strips from the landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
 
         <div id="main">
             <h2>LED Strip Controller</h2>
+            <table>
+                <tr>
+                    <th>Desk</th>
+                    <th>
+                        <button>Toggle</button>
+                    </th>
+                </tr>
+                <tr>
+                    <th>Closet</th>
+                    <th>
+                        <button>Toggle</button>
+                    </th>
+                </tr>
+                <tr>
+                    <th>Bedside</th>
+                    <th>
+                        <button>Toggle</button>
+                    </th>
+                </tr>
+            </table>
+
+            <br>
+
+            <table>
+                <tr>
+                    <th>All</th>
+                    <th>
+                        <button>Toggle</button>
+                    </th>
+                </tr>
+            </table>
         </div>
 
         <div id="solidColor">
