Implementing the pages for  fade/flash and audio

--- a/index.html
+++ b/index.html
@@ -75,10 +75,25 @@
 
         <div id="audio">
             <h2>Audio</h2>
+            <button>Activate</button>
         </div>
 
         <div id="fadeAndFlash">
             <h2>Fade and Flash</h2>
+            <table>
+                <tr>
+                    <th>Fade</th>
+                    <th>
+                        <button>Activate</button>
+                    </th>
+                </tr>
+                <tr>
+                    <th>Flash</th>
+                    <th>
+                        <button>Activate</button>
+                    </th>
+                </tr>
+            </table>
         </div>
 
     </body>
